Fixed Deprecation errors