@@ -5,6 +5,8 @@ import jakarta.validation.ConstraintValidatorContext;
 import org.springframework.util.StringUtils;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.regex.Pattern;
 
@@ -36,11 +38,12 @@ public class ValidBannerUrlValidator implements ConstraintValidator<ValidBannerU
             return false;
         }
 
-        // Additional URL validation
+        // Additional URL validation using modern URI.create().toURL() approach
+        // This replaces the deprecated URL(String) constructor
         try {
-            new URL(value);
+            URI.create(value).toURL();
             return true;
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | IllegalArgumentException e) {
             return false;
         }
     }
